--- a/package.json
+++ b/package.json
@@ -4,13 +4,37 @@
   "private": true,
   "homepage": "https://Minaht007.github.io/goit-react-hw-08-phonebook/",
   "dependencies": {
+    "@emotion/react": "^11.10.6",
+    "@emotion/styled": "^11.10.6",
+    "@hookform/resolvers": "^3.1.0",
+    "@mui/base": "^5.0.0-alpha.127",
+    "@mui/material": "^5.12.2",
+    "@mui/styled-engine": "^5.12.0",
+    "@mui/styled-engine-sc": "^5.12.0",
+    "@mui/system": "^5.12.1",
+    "@reduxjs/toolkit": "^1.9.5",
     "@testing-library/jest-dom": "^5.16.3",
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
-    "react": "^18.1.0",
+    "axios": "^1.3.6",
+    "modern-normalize": "^1.1.0",
+    "notiflix": "^3.2.6",
+    "react": "^18.2.0",
     "react-dom": "^18.1.0",
+    "react-hook-form": "^7.43.9",
+    "react-icons": "^4.8.0",
+    "react-loader-spinner": "^5.3.4",
+    "react-number-format": "^5.1.4",
+    "react-redux": "^8.0.5",
+    "react-resolve": "^1.0.3",
+    "react-router-dom": "^6.10.0",
     "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.3"
+    "react-toastify": "^9.1.2",
+    "redux-persist": "^6.0.0",
+    "resolve": "^1.22.2",
+    "styled-components": "^5.3.10",
+    "web-vitals": "^2.1.3",
+    "yup": "^1.1.1"
   },
   "scripts": {
     "start": "react-scripts start",
